--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -6,3 +6,21 @@
   padding: 0;
   margin-bottom: 6px; 
 }
+
+@media screen and (max-width: 1024px) {
+  .header__lang-links {
+    margin-bottom: 8px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__lang-links {
+    margin-bottom: 6px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-links {
+    margin-bottom: 8px;
+  }
+}
