--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,3 +12,16 @@
   max-width: 1184px;
   width: calc(100% - 96px);
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    width: calc(100% - 48px);
+  }
+}
+  
+@media screen and (max-width: 320px) {
+  .header {
+    padding-top: 16px;
+    width: calc(100% - 32px);
+  }
+}
