--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,3 +12,9 @@
   align-items: center;
 }
 
+@media screen and (max-width: 1024px) {
+  .lead {
+    margin-top: 48px;
+    width: calc(100% - 96px);
+  }
+}
