--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,3 +9,19 @@
   max-width: 720px;
   text-align: center;
 }
+
+@media screen and (max-width: 690px) {
+  .lead__title {
+    font-size: 62px;
+    line-height: 100px;
+   }
+}
+
+@media screen and (max-width: 450px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+}
