--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -8,3 +8,9 @@
   margin-bottom: 33px;
   width: 100%;
 }
+
+@media screen and (max-width: 420px) {
+  .intro__text {
+    margin-bottom: 34px;
+  }
+}
