--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,7 +6,26 @@
   max-width: 690px;
   margin: 0;
   margin-left: 148px;
- /* margin-right: 442px;*/
   margin-top: 92px;
-  
+}
+
+@media screen and (max-width: 1100px) {
+  .intro {
+    margin-left: 48px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .intro {
+    margin-top: 88px;
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .intro {
+    margin-top: 64px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
