--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,45 @@
 .photo-grid {
   display: grid;
-  grid-template-rows: repeat(3, 213px);
-  grid-template-columns: repeat(4, 284px);
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+  margin: 0;
+  margin-top: 92px;
+  max-width: 1184px;
+  margin-left: 48px;
+  margin-right: 48px;
+  
+}
+
+@media screen and (max-width: 1100px) {
+  .photo-grid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 14px;
+
+
+  }
+  
+}
+
+@media screen and (max-width: 800px) {
+  .photo-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+    margin-left: 24px;
+    margin-right: 24px;
+
+
+  }
+  
+}
+
+@media screen and (max-width: 460px) {
+  .photo-grid {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 12px;
+    margin-left: 16px;
+    margin-right: 16px;
+
+
+  }
+  
 }
