--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,26 +1,15 @@
 .cover__overlay {
-
-margin: 0;
-position: relative;
-
-
-display: flex;
-
-
-color: #000;
-
-text-decoration: none;
-
-max-width: 1184px;
-min-height: 740px;
-
-
-background-image: url(../../../images/cover-trains.jpg);
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-
-
+  background: #2a2c2f;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  opacity: 0.3; 
+  transition: opacity 0.8s
 }
 
-
+.cover:hover .cover__overlay  {
+  opacity: 0.8;
+}
+  
