--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,23 +1,23 @@
 .cover__subtitle {
   margin: 0;
   margin-top: 32px;
-  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
-  
+  max-width: 360px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
   color: #fff;
-  max-width: 360px;
-  
   text-decoration: none;
-  
-  text-align: center;
-  
+  z-index: 1;
+}
 
- 
-  
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    margin-top: 16px;
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
