--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,21 +3,19 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 560px;
-  /*margin-left: auto;
-  margin-right: auto;*/
-  margin-bottom: 32px;
-  text-decoration: none;
   color: #fff;
- 
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   text-align: center;
-
-  z-index: 2;
-  
-  /*padding: 0;
-  padding: 245px;*/
+  text-decoration: none;
+  z-index: 1;
 }
 
+@media screen and (max-width: 650px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
