--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,38 @@
 .cover {
   margin: 0;
-  padding: 0;
+  margin-top: 92px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 92px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  flex-direction: column;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   max-width: 1184px;
+  min-height: 740px; 
+  position: relative;
+}
+  
+@media screen and (max-width: 1184px) {
+  .cover {
+    min-height: 640px;
+  }
+}
+  
+@media screen and (max-width: 1023px) {
+  .cover{
+    margin-top: 90px;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+    margin-top: 66px;
+    min-height: 200px;
+  }
 }
