--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -15,3 +15,11 @@
 .footer__link:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 680px){
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+    margin-right: 0; 
+  }
+}
