--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -15,13 +15,14 @@
     margin-top: 88px;
     margin-left: 24px;
     margin-right: 24px;
-    }
-    
+  }
 }
 
 @media screen and (max-width: 680px) {
-    .footer {
-      flex-direction: column;
-      }
-      
-  }
+  .footer {
+    flex-direction: column;
+    margin-top: 64px;
+    margin-left: 16px;
+    margin-right: auto;
+  }    
+}
