--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -14,10 +14,7 @@
   .photo-grid {
     grid-template-columns: repeat(3, 1fr);
     gap: 14px;
-
-
-  }
-  
+  } 
 }
 
 @media screen and (max-width: 800px) {
@@ -26,10 +23,8 @@
     gap: 16px;
     margin-left: 24px;
     margin-right: 24px;
-
-
-  }
-  
+    margin-top: 88px;
+  } 
 }
 
 @media screen and (max-width: 460px) {
@@ -38,8 +33,6 @@
     gap: 12px;
     margin-left: 16px;
     margin-right: 16px;
-
-
-  }
-  
+    margin-top: 64px;
+  }  
 }
