--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -4,4 +4,10 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  opacity: 1;
+  transition: opacity 0.7s
+}
+
+.place__link:hover {
+  opacity: 0.8;
 }
