--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,7 +8,7 @@
   justify-content: center;
   text-decoration: none;
   flex-direction: column;
-  background-image: url(../../../images/cover-trains.jpg);
+  background-image: url(../../images/cover-trains.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
