--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,13 +1,15 @@
 .header__logo {
   background: url(../../../images/header-logo.svg);
   background-size: cover;
+  background-position: center;
+  background-position: center;
   margin: 0;
   padding: 0;
   width: 176px;
   height: 52px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 600px) {
   .header__logo {
     width: 142px;
     height: 42px;
