--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,18 +10,23 @@
   margin-bottom: 0;
   padding-top: 28px;
   max-width: 1184px;
-  width: calc(100% - 96px);
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+   max-width: 928px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .header {
-    width: calc(100% - 48px);
+   max-width: 720px;
   }
 }
   
 @media screen and (max-width: 320px) {
   .header {
     padding-top: 16px;
-    width: calc(100% - 32px);
+    max-width: 288px;
   }
 }
