--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,7 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 984px;
-  width: calc(100% - 296px);
+ /* width: calc(100% - 296px);*/
   color: #fff; 
   display: flex;
   flex-direction: column;
@@ -15,12 +15,19 @@
 @media screen and (max-width: 1100px) {
   .lead {
     margin-top: 48px;
-    width: calc(100% - 96px);
+    max-width: 928px;
+    /*width: calc(100% - 96px);*/
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead {
-    width: 100%; 
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+    max-width: 320px;
   }
 }
