--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -6,7 +6,7 @@
   right: 0;
   top: 0;
   opacity: 0.3;
-  transition: opacity 0.8s
+  transition: opacity 0.8s;
 }
 
 .cover:hover .cover__overlay  {
