--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,11 +5,11 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
-  margin-right: 18px; 
+  margin-right: 18px;
   color: #fff;
   text-decoration: none;
   opacity: 1;
-  transition: opacity 0.7s
+  transition: opacity 0.7s;
 }
 
 .footer__link:hover {
