--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,7 +5,7 @@
   font-size: 18px;
   line-height: 22px;
   opacity: 1;
-  transition: opacity 0.7s
+  transition: opacity 0.7s;
 }
 
 .place__link:hover {
