--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,6 +8,12 @@
   font-size: 24px;
   line-height: 28px;
   text-align: right;
+  opacity: 1;
+  transition: opacity 0.7s;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 320px) {
