--- a/blocks/header/__lang-link/header__lang-link_active.css
+++ b/blocks/header/__lang-link/header__lang-link_active.css
@@ -1,4 +1,5 @@
 .header__lang-link_active {
-  text-decoration-line: underline;
-  margin-right: 18px;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
+  border-bottom-color: #fff;
 }
