--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,26 +1,16 @@
 .header__lang-links {
-  display: flex;
-  align-items: flex-end;
   list-style: none;
+  display: flex;
   margin: 0;
   padding: 0;
-  margin-bottom: 6px; 
-}
-
-@media screen and (max-width: 1024px) {
-  .header__lang-links {
-    margin-bottom: 8px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .header__lang-links {
-    margin-bottom: 6px;
-  }
+  gap: 18px;
+  margin-top: 18px;
+  margin-bottom: 6px;
 }
 
 @media screen and (max-width: 320px) {
   .header__lang-links {
+    margin-top: 14px;
     margin-bottom: 8px;
   }
 }
