--- a/blocks/cover/__background-overlay/cover__background-overlay.css
+++ b/blocks/cover/__background-overlay/cover__background-overlay.css
@@ -1,10 +1,13 @@
 .cover__background-overlay {
   margin: 0;
+  margin-left: auto;
+  margin-right: auto;
   background-image: url(../../../images/cover-trains.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 740px;
+  max-width: 1184px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -12,7 +15,6 @@
   justify-content: center;
   position: relative;
   text-decoration: none;
-  transition: opacity 0.7s;
 }
 
 .cover__background-overlay:before {
@@ -25,6 +27,7 @@
   width: 100%;
   content: "";
   opacity: 0.3;
+  transition: opacity 0.7s;
   background: #2a2c2f;
 }
 
