--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -27,11 +27,12 @@
     column-gap: 28px;
   }
 }
-      
+
 @media screen and (max-width: 720px) {
   .place {
     grid-template-columns: minmax(250px, 750px);
-    column-gap: 32px;
+    row-gap: 32px;
+    margin-bottom: 50px;
   }
 }
 
